Fix staff details modal, set overflow hidden to round bottom corners and adjust header positioning

--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -23,7 +23,7 @@
   min-width: 200px;
   height: fit-content;
   width: fit-content;
-
+  overflow: hidden;
 
   position: relative;
 
