--- a/src/components/business_settings/tabs.module.scss
+++ b/src/components/business_settings/tabs.module.scss
@@ -68,6 +68,26 @@
   }
 }
 
+.StaffList {
+  background: #F8F8F8;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  .header {
+    padding-left: 90px;
+    text-align: center;
+    padding-right: 0;
+
+    > p {
+      width: 100%;
+    }
+  }
+}
+
+
 .header {
   display: flex;
   justify-content: flex-start;
@@ -76,6 +96,10 @@
 
   font-size: 13px;
   font-weight: 300;
+
+  p {
+    width:fit-content;
+  }
 }
 
 .client {
@@ -151,6 +175,14 @@
   flex-direction: column;
 
   background: #F8F8F8;
+
+  .header { 
+    justify-content: flex-start; 
+    p { 
+      width: fit-content; 
+      padding-left: 20px;
+    }
+  }
 }
 
 .details {
@@ -183,7 +215,8 @@
   display: flex;
   align-items: center;
 
-  margin: 10px 20px;
+  padding: 25px 20px;
+  border-bottom: 1px solid var(--dividers);
 
   > * { margin-right: 20px}
 
